bk_ida/gccida/g0/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1085:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1092:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_outputs = recog_data_0.n_operands - n_inputs; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1095:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1097:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 63 && *( _WORD *)recog_data_0.operand[i]->fld[0].rtwint == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1097:61: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 63 && *( _WORD *)recog_data_0.operand[i]->fld[0].rtwint == 61 ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1098:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1098:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1121:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 61 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1122:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint > 7u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1123:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint <= 0xFu ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1129:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand[i]->fld[0].rtint == clobber_reg[j]->fld[0].rtint ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1141:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
reg_used_as_output[recog_data_0.operand[i]->fld[0].rtuint] = 1; 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1162:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 61 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1163:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint > 7u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1164:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint <= 0xFu ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1166:73: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( j_0 = 0; j_0 < n_clobbers && !operands_match_p( clobber_reg[j_0], recog_data_0.operand[i]); ++j_0 ) 
                                                                        ^~~~~~~~~~~~
                                                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1169:17: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
implicitly_dies[recog_data_0.operand[i]->fld[0].rtuint] = 1; 
                ^~~~~~~~~~~~
                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1187:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( operands_match_p( recog_data_0.operand[j_1], recog_data_0.operand[i]) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/reg-stack.c:1187:51: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( operands_match_p( recog_data_0.operand[j_1], recog_data_0.operand[i]) ) 
                                                  ^~~~~~~~~~~~
                                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
